--- a/.github/workflows/CI-iOS.yml
+++ b/.github/workflows/CI-iOS.yml
@@ -23,4 +23,4 @@ jobs:
       run: /usr/bin/xcodebuild -version
       
     - name: Build and Test
-      run: xcodebuild clean build test Connected/Connected.xcodeproj -scheme "Connected" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15,OS=17.0" ONLY_ACTIVE_ARCH=YES
+      run: xcodebuild clean build test Connected/Connected.xcodeproj -scheme "Connected" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=17" ONLY_ACTIVE_ARCH=YES
