--- a/.github/workflows/CI-iOS.yml
+++ b/.github/workflows/CI-iOS.yml
@@ -17,10 +17,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_15.0.app
+      run: sudo xcode-select -switch /Applications/Xcode.app
       
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
       
     - name: Build and Test
-      run: xcodebuild clean build test Connected/Connected.xcodeproj -scheme "Connected" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=17" ONLY_ACTIVE_ARCH=YES
+      run: xcodebuild clean build test Connected.xcodeproj -scheme "Connected" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=17" ONLY_ACTIVE_ARCH=YES
