--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ jobs:
  build-and-test:
   runs-on: macos-13
 
-  timeout-minutes: 5
+  timeout-minutes: 10
 
   steps:
   - uses: actions/checkout@v2
@@ -18,5 +18,5 @@ jobs:
   - name: Select Xcode
     run: sudo xcode-select -switch /Applications/Xcode_15.0.1.app
   - name: Build & Test
-    run: xcodebuild clean build test -workspace Connected.xcworkspace -scheme Connected CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 14 Pro,OS=17.0'
+    run: xcodebuild test -workspace Connected/Connected.xcworkspace -scheme "Connected" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=17.0.1" ONLY_ACTIVE_ARCH=YES SWIFT_TREAT_WARNINGS_AS_ERRORS=YES OTHER_SWIFT_FLAGS="-D ED_SKIP_SWIFT_FORMAT"
    
